force-app/main/default/objects/EnvelopeAttachment__c/EnvelopeAttachment__c.object-meta.xml
<CustomObject>
    <label>EnvelopeAttachment</label>
    <nameField>
        <label>EnvelopeAttachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EnvelopeAttachment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>