force-app/main/default/objects/EnvelopeAttachment__c/fields/AttachmentNo__c.field-meta.xml
<CustomField>
    <fullName>AttachmentNo__c</fullName>
    <label>AttachmentNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>