force-app/main/default/objects/EnvelopeAttachment__c/fields/EnvelopeInfo__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EnvelopeInfo</label>
    <referenceTo>EnvelopeInfo__c</referenceTo>
    <relationshipLabel>EnvelopeAttachment</relationshipLabel>
    <relationshipName>EnvelopeAttachment</relationshipName>
    <type>Lookup</type>
</CustomField>